<resources>
    <string name="app_name">TripMeter</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_trips">TRIPS</string>
    <string name="nav_about_us">ABOUT US</string>
    <string name="place_holder_0">0</string>
    <string name="label_km_ph">KM/PH</string>
    <string name="label_start">START</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_ok">OK</string>
    <string name="permissions_denied">Trip Meter can not work without location permissions.</string>
    <string name="permissions_required">Trip Meter uses location feature of your device to provide you speed and other useful information.\nPlease grant permissions in app settings.</string>
    <string name="enable_gps">Location services must be enabled in order to get the speed information.</string>
    <string name="location_required">Trip Meter can not work without location services turned on.</string>
    <string name="label_start_address">Start Address : </string>
    <string name="label_end_address">End Address : </string>
    <string name="label_speed">Speed :</string>
    <string name="label_no_trips">You have not added any trips yet.</string>
    <string name="label_distance">Distance : </string>
    <string name="end_trip">END\nTRIP</string>
    <string name="start_trip">START\nTRIP</string>
    <string name="label_current_address">Current Address : </string>
    <string name="label_km">KM</string>
    <string name="label_trip_average_speed">Trip Avg Speed : </string>
    <string name="header_how_to">HOW TO</string>
    <string name="text_about_us">At forall apps are mission is to develop applications that provide great features while maintaining a minimal user interface. So that you don\'t have you to spend hours figuring out how to use the application. \n\nTrip meter follows the same idea in its design.\nAs the name makes it very clear \'Trip Meter\' allows you to keep track of your trips, every recorded trip contains multiple information points such as start address, end address, distance covered and the average speed. \n\nplease provide us your valuable feedback at play store.\n Thank you for using Trip Meter</string>
    <string name="text_how_to">1. By default home screen displays your current speed and current address.\n\n2. If you want to record your current trip you can tap the \'START TRIP\' button.\n\n3. Once trip is started \'START TRIP\' button changes to \'END TRIP\' and trip related additional information is displayed on home screen.\n\n4. To end the trip tap \'END TRIP\' button.\n\n5. You can view all your previous trips by navigating to trips section</string>
    <string name="label_started">Started - </string>
    <string name="label_ended">Ended -</string>
</resources>