<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.forall.tripmeter.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_trips"
        android:name="com.forall.tripmeter.ui.home.trips.TripsFragment"
        android:label="@string/nav_trips"
        tools:layout="@layout/fragment_trips" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.forall.tripmeter.ui.home.aboutus.AboutUsFragment"
        android:label="@string/nav_about_us"
        tools:layout="@layout/fragment_about_us" />

</navigation>