<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@drawable/bg_app"
    tools:context=".ui.home.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:fontFamily="serif"
            android:text="@string/place_holder_0"
            android:textColor="@color/white"
            android:textSize="56sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="76" />

        <TextView
            android:id="@+id/label_kmph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:elevation="10dp"
            android:text="@string/label_km_ph"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_speed"
            app:layout_constraintStart_toEndOf="@+id/tv_speed" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btn_trip_start"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/bg_round_btn"
        android:backgroundTint="@color/colorPrimary"
        android:layout_margin="16dp"
        android:text="@string/label_start"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>